<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/list_holder"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/empty_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:textSize="25sp"
            android:text="@string/no_expenses_on_this_day" />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/expense_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />



    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorAccent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/add_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:background="@android:color/transparent"
            android:text="@string/plus"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/total"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/total"
            android:textColor="@color/white"
            android:textSize="20sp" />


    </RelativeLayout>




    <CalendarView
        android:id="@+id/calendar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.8" />
</LinearLayout>